--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,5 +22,12 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: acquiring secrets
+      env:
+          ROUTAA_MAVEN_USERNAME: ${{ secrets.ROUTAA_MAVEN_USERNAME }}
+          ROUTAA_MAVEN_PASSWORD: ${{ secrets.ROUTAA_MAVEN_PASSWORD }}
+      run: echo ROUTAA_MAVEN_USERNAME=\"$ROUTAA_MAVEN_USERNAME\" > ./local.properties &&
+       echo ROUTAA_MAVEN_PASSWORD=\"$ROUTAA_MAVEN_PASSWORD\" > ./local.properties &&
+       cat ./locale.properties
     - name: Build with Gradle
       run: ./gradlew build
